{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 378,
  "lineage": "1937e6f2-8e9d-2777-ab0b-978829066204",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-027a754129abb5386",
            "arn": "arn:aws:ec2:us-east-1:596459525166:instance/i-0bf99cb410d1aaf50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf99cb410d1aaf50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "darksied-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fc2ed9a16499c76",
            "private_dns": "ip-10-0-0-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.13",
            "public_dns": "ec2-54-157-43-130.compute-1.amazonaws.com",
            "public_ip": "54.157.43.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fbb66f181363f796",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063e2ba7e6df9a053",
            "tags": {
              "Name": "darksied-ec2-0"
            },
            "tags_all": {
              "Name": "darksied-ec2-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e66ffca093549ade"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.rsa-key",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.tls_private_key.rsa-key",
            "module.sg.aws_security_group.public-instance-sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-027a754129abb5386",
            "arn": "arn:aws:ec2:us-east-1:596459525166:instance/i-06537a8bac0329d7e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06537a8bac0329d7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "darksied-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037763d3e46402acd",
            "private_dns": "ip-10-0-0-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.30",
            "public_dns": "ec2-50-17-57-14.compute-1.amazonaws.com",
            "public_ip": "50.17.57.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03e35bce252c64deb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019e9bad6b85aaa6d",
            "tags": {
              "Name": "darksied-ec2-1"
            },
            "tags_all": {
              "Name": "darksied-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e66ffca093549ade"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.rsa-key",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.tls_private_key.rsa-key",
            "module.sg.aws_security_group.public-instance-sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-027a754129abb5386",
            "arn": "arn:aws:ec2:us-east-1:596459525166:instance/i-0f0728862bd6fa2c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0728862bd6fa2c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "darksied-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011d1ab80302a47e7",
            "private_dns": "ip-10-0-0-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.39",
            "public_dns": "ec2-54-209-250-98.compute-1.amazonaws.com",
            "public_ip": "54.209.250.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08bb39fcfc377e7b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0521ee08dd51f4208",
            "tags": {
              "Name": "darksied-ec2-2"
            },
            "tags_all": {
              "Name": "darksied-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e66ffca093549ade"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.rsa-key",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.tls_private_key.rsa-key",
            "module.sg.aws_security_group.public-instance-sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:596459525166:loadbalancer/app/darksied-elb/3380038fcb42a1ef",
            "arn_suffix": "app/darksied-elb/3380038fcb42a1ef",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "darksied-elb-578155467.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:596459525166:loadbalancer/app/darksied-elb/3380038fcb42a1ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "darksied-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09240c3aaf2550b31"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-019e9bad6b85aaa6d"
              },
              {
                "subnet_id": "subnet-0521ee08dd51f4208"
              },
              {
                "subnet_id": "subnet-063e2ba7e6df9a053"
              }
            ],
            "subnets": [
              "subnet-019e9bad6b85aaa6d",
              "subnet-0521ee08dd51f4208",
              "subnet-063e2ba7e6df9a053"
            ],
            "tags": {
              "Name": "darksied-elb"
            },
            "tags_all": {
              "Name": "darksied-elb"
            },
            "vpc_id": "vpc-002e950c74c7f1179",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sg.aws_security_group.elb-sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "elb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:596459525166:listener/app/darksied-elb/3380038fcb42a1ef/53ce7d959361ada5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:596459525166:targetgroup/darksied-elb-tg/a010b3cd4ef83a44",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:596459525166:listener/app/darksied-elb/3380038fcb42a1ef/53ce7d959361ada5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:596459525166:loadbalancer/app/darksied-elb/3380038fcb42a1ef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.elb",
            "module.elb.aws_lb_target_group.elb-tg",
            "module.sg.aws_security_group.elb-sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:596459525166:targetgroup/darksied-elb-tg/a010b3cd4ef83a44",
            "arn_suffix": "targetgroup/darksied-elb-tg/a010b3cd4ef83a44",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:596459525166:targetgroup/darksied-elb-tg/a010b3cd4ef83a44",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "darksied-elb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "darksied-elb-tg"
            },
            "tags_all": {
              "Name": "darksied-elb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-002e950c74c7f1179"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "elb-tg-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:596459525166:targetgroup/darksied-elb-tg/a010b3cd4ef83a44-20240119171104673500000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:596459525166:targetgroup/darksied-elb-tg/a010b3cd4ef83a44",
            "target_id": "i-0bf99cb410d1aaf50"
          },
          "dependencies": [
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_key_pair.rsa-key",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.tls_private_key.rsa-key",
            "module.elb.aws_lb_target_group.elb-tg",
            "module.sg.aws_security_group.public-instance-sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:596459525166:targetgroup/darksied-elb-tg/a010b3cd4ef83a44-20240119171104268700000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:596459525166:targetgroup/darksied-elb-tg/a010b3cd4ef83a44",
            "target_id": "i-06537a8bac0329d7e"
          },
          "dependencies": [
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_key_pair.rsa-key",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.tls_private_key.rsa-key",
            "module.elb.aws_lb_target_group.elb-tg",
            "module.sg.aws_security_group.public-instance-sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:596459525166:targetgroup/darksied-elb-tg/a010b3cd4ef83a44-20240119171103852800000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:596459525166:targetgroup/darksied-elb-tg/a010b3cd4ef83a44",
            "target_id": "i-0f0728862bd6fa2c4"
          },
          "dependencies": [
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_key_pair.rsa-key",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.tls_private_key.rsa-key",
            "module.elb.aws_lb_target_group.elb-tg",
            "module.sg.aws_security_group.public-instance-sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596459525166:security-group/sg-09240c3aaf2550b31",
            "description": "Allow HTTP and HTTPs inbound traffic and all traffic outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09240c3aaf2550b31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240119170942955100000002",
            "name_prefix": "terraform-",
            "owner_id": "596459525166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darksied-elb-sg"
            },
            "tags_all": {
              "Name": "darksied-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-002e950c74c7f1179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596459525166:security-group/sg-0e66ffca093549ade",
            "description": "Allow SSH ICMP HTTP and HTTPs inbound traffic and all traffic outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e66ffca093549ade",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP inbound traffic",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH inbound traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240119170943006100000003",
            "name_prefix": "terraform-",
            "owner_id": "596459525166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "darksied-public-instance-1-sg"
            },
            "tags_all": {
              "Name": "darksied-public-instance-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-002e950c74c7f1179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596459525166:internet-gateway/igw-00157857b3d1c91d4",
            "id": "igw-00157857b3d1c91d4",
            "owner_id": "596459525166",
            "tags": {
              "Name": "darksied-mini-project-igw"
            },
            "tags_all": {
              "Name": "darksied-mini-project-igw"
            },
            "vpc_id": "vpc-002e950c74c7f1179"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596459525166:route-table/rtb-05aaecc50d4e25be1",
            "id": "rtb-05aaecc50d4e25be1",
            "owner_id": "596459525166",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00157857b3d1c91d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "darksied-mini-project-public-route-table"
            },
            "tags_all": {
              "Name": "darksied-mini-project-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-002e950c74c7f1179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0b370901021a336",
            "route_table_id": "rtb-05aaecc50d4e25be1",
            "subnet_id": "subnet-063e2ba7e6df9a053"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03813f87648d938d8",
            "route_table_id": "rtb-05aaecc50d4e25be1",
            "subnet_id": "subnet-019e9bad6b85aaa6d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public-subnet-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08346b22530feb1ea",
            "route_table_id": "rtb-05aaecc50d4e25be1",
            "subnet_id": "subnet-0521ee08dd51f4208"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596459525166:subnet/subnet-063e2ba7e6df9a053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063e2ba7e6df9a053",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596459525166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darksied-mini-project-public-subnet-1"
            },
            "tags_all": {
              "Name": "darksied-mini-project-public-subnet-1"
            },
            "vpc_id": "vpc-002e950c74c7f1179"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596459525166:subnet/subnet-019e9bad6b85aaa6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019e9bad6b85aaa6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596459525166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darksied-mini-project-public-subnet-2"
            },
            "tags_all": {
              "Name": "darksied-mini-project-public-subnet-2"
            },
            "vpc_id": "vpc-002e950c74c7f1179"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public-subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596459525166:subnet/subnet-0521ee08dd51f4208",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0521ee08dd51f4208",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "596459525166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "darksied-mini-project-public-subnet-3"
            },
            "tags_all": {
              "Name": "darksied-mini-project-public-subnet-3"
            },
            "vpc_id": "vpc-002e950c74c7f1179"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:596459525166:vpc/vpc-002e950c74c7f1179",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-073aeb4661e9da863",
            "default_route_table_id": "rtb-0bfcbf9c6958c56bc",
            "default_security_group_id": "sg-0fd82de121d32a774",
            "dhcp_options_id": "dopt-0e3ddb56e46cefa93",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002e950c74c7f1179",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfcbf9c6958c56bc",
            "owner_id": "596459525166",
            "tags": {
              "Name": "darksied-mini-project-vpc"
            },
            "tags_all": {
              "Name": "darksied-mini-project-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}